@@ -1,5 +1,6 @@
 Version 0.48.0 (In Progress)
 
+  * Include optional support to define network gateway for Warewulf installs
   * Updated ipmi convenience utils (ion,ioff, etc) to use lanplus interface
 
 Version 0.47.2 (15 July 2014)
